--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
-spring.datasource.driver-class-name=org.postgresql.Driver
-server.port=1200
+spring.datasource.driver-class-name=${DB_DRIVER}
+server.port=1500
 spring.jpa.database=POSTGRESQL
 spring.sql.init.platform=postgres
 spring.jpa.show-sql=true
