--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,9 @@ spring.jpa.database=POSTGRESQL
 spring.sql.init.platform=postgres
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.jackson.time-zone=America/Bogota
 spring.jackson.locale=es_CO
+server.port=1200
