--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
+            <version>5.6.3</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
